--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <title>4TaxCloud - Seidor</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet" />
+
+    <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2/dist/sweetalert2.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
